--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+encoding: UTF-8
+kramdown:
+  input: GFM
+  hard_wrap: false
+future: true
+jailed: false
+gfm_quirks: paragraph_end
 theme: jekyll-theme-minimal
+
