Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ kramdown:
 future: true
 jailed: false
 gfm_quirks: paragraph_end
-theme: jekyll-theme-minimal
+theme: jekyll-theme-leap-day
 plugins:
   - jekyll-sitemap
