--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ kramdown:
 future: true
 jailed: false
 gfm_quirks: paragraph_end
-theme: jekyll-theme-dinky
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-sitemap
 highlighter: rouge
