--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 author: Rae Kim
 title: RK's Notes
 description: >
-  메모장
+  이것저것 여러분야 관심사를 메모하기 위한 블로그. Powered by Jekyll
 encoding: UTF-8
 kramdown:
   input: GFM
@@ -14,6 +14,7 @@ minima:
 theme: minima
 github_username: z49x2vmq
 plugins:
+  - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-feed
 disqus:
