--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,10 @@ disqus:
 timezone: Asia/Seoul
 logo: /assests/wire.jpg
 google_analytics: UA-109701028-1
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+     author: "Rae Kim"
