--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ jailed: false
 gfm_quirks: paragraph_end
 minima:
   date_format: "%Y-%m-%d %H:%M %Z"
-theme: jekyll-theme-primer
+theme: minima
 github_username: z49x2vmq
 plugins:
   - jekyll-seo-tag
