--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: >
   이것저것 여러분야 관심사를 메모하기 위한 블로그. Powered by Jekyll
 encoding: UTF-8
 permalink: pretty
+exclude: ["google49412ec2098884ad.html"]
 kramdown:
   input: GFM
   hard_wrap: false
