--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 author: RK
 title: RK's Notes
 description: >
-  이것저것 여러분야 관심사를 메모하기 위한 블로그. Powered by Jekyll
+  이것저것 여러분야 관심사를 메모하기 위한 블로그.
 encoding: UTF-8
 permalink: pretty
 exclude: ["google49412ec2098884ad.html"]
